# carbon-footprint-mcp

./: .gitignore  CHANGELOG.md  README.md  glama.json  pyproject.toml  server.json
evals/: evals.json
references/: calculation_guide.md  validation_rules.md  worked_example.md
src/carbon_footprint_mcp/: compute_emissions.py  emission_factors.py  html_templates.py  render_report.py  server.py
test/: bank_statement.csv  sample_activity_data.json
