[project]
name = "carbon-footprint-mcp"
version = "1.0.0"
description = "An MCP server for calculating carbon footprints using EPA GHG emission factors."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.1",
]

[project.scripts]
carbon-footprint-mcp = "carbon_footprint_mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carbon_footprint_mcp"]
